@@ -19,7 +19,7 @@
       type: group
       fields:
         - name: allocatable.cores
-          type: long
+          type: float
           description: >
             Node CPU allocatable cores
         - name: capacity.cores
